@@ -18,5 +18,6 @@
   20-Jun-2021  - V0.27 Move ChEMBL API settings into the ChEMBLTargetActivityProvider and ChEMBLTargetMechanismProvider modules
   20-Jun-2021  - V0.28 Add method getTargetIdList() in ChEMBLTargetActivityProvider module and standardize some method prototypes
   20-Jun-2021  - V0.29 Add multiprocessing class to ChEMBLTargetActivityProvider and standardize cofactor attribute names
+  21-Jun-2021  - V0.30 Make ChEMBL activity query more selective and focus error handling more specifically on return issues.
 
 
